docs: add 400 response description to LevelController/show ss-026
